--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="header">
         <div class="logo">
-            <img src="./images/LogoSample_ByTailorBrands.jpg" alt="logo">
+            <img id="logo" src="./images/zanny-logo.jpg" alt="logo">
         </div>
         <nav class="header-links">
             <a href="#about">About</a>
@@ -41,16 +41,31 @@
                 <button id="left" class="left"><span></span></button>
                 <div class="product-img">
                     <div class="image">
-                        <img src="./images/IMG-20220218-WA0058.jpg" alt="image">
+                        <img src="./images/zanny-10.jpg" alt="">
                     </div>
                     <div class="image">
-                        <img src="./images/IMG-20220218-WA0059.jpg" alt="">
+                        <img src="./images/zanny-9.jpg" alt="image">
                     </div>
                     <div class="image">
-                        <img src="./images/IMG-20220218-WA0062.jpg" alt="image">
+                        <img src="./images/zanny-3.jpg" alt="image"> 
                     </div>
                     <div class="image">
-                        <img src="./images/IMG-20220218-WA0065.jpg" alt="image"> 
+                        <img src="./images/zanny-4.jpg" alt="image">
+                    </div>
+                    <div class="image">
+                        <img src="./images/zanny-8.jpg" alt="image">
+                    </div>
+                    <div class="image">
+                        <img src="./images/zanny-5.jpg" alt="image">
+                    </div>
+                    <div class="image">
+                        <img src="./images/zanny-1.jpg" alt="image">
+                    </div>
+                    <div class="image">
+                        <img src="./images/zanny-7.jpg" alt="image">
+                    </div>
+                    <div class="image">
+                        <img src="./images/zanny-6.jpg" alt="image">
                     </div>
                 </div>
                 <button id="right" class="right"><span></span></button>
@@ -62,7 +77,7 @@
             <div class="cards">
                 <div class="card">
                     <div class="left-card">
-                        <img class="img" src="./images/camp-verse-top.jpg" alt="reviewer">
+                        <img class="img" src="./images/customer-review-1.jpg" alt="reviewer">
                     </div>
                     <div class="right-card">
                         <h3 class="name">Hallab</h3>
@@ -71,7 +86,7 @@
                 </div>
                 <div class="card">
                     <div class="left-card">
-                        <img class="img" src="./images/camp-verse-top.jpg" alt="reviewer">
+                        <img class="img" src="./images/customer-review-1.jpg" alt="reviewer">
                     </div>
                     <div class="right-card">
                         <h3 class="name">Hallab</h3>
@@ -80,7 +95,7 @@
                 </div>
                 <div class="card">
                     <div class="left-card">
-                        <img class="img" src="./images/camp-verse-top.jpg" alt="reviewer">
+                        <img class="img" src="./images/customer-review-1.jpg" alt="reviewer">
                     </div>
                     <div class="right-card">
                         <h3 class="name">Hallab</h3>
@@ -89,7 +104,7 @@
                 </div>
                 <div class="card">
                     <div class="left-card">
-                        <img class="img" src="./images/camp-verse-top.jpg" alt="reviewer">
+                        <img class="img" src="./images/customer-review-1.jpg" alt="reviewer">
                     </div>
                     <div class="right-card">
                         <h3 class="name">Hallab</h3>
