third commit made some changes

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     </div>
     <div class="main">
         <div class="about" id="about">
+            <h1>ABOUT US</h1>
             <div>
-                <h1>ABOUT US</h1>
-                <p>At Zanny Hijabs, we deal with apparels and clothing. we deal in sewing all sorts of islamic wears such as khimar, abhaya, hijab, and more...</p>
+                <p>At Zanny Hijabs, we deal in apparels and clothing. We deal in sewing all sorts of islamic wears such as khimar, abhaya, hijab, and more...</p>
             </div>
         </div>
         <div class="services" id="services">
@@ -117,16 +117,11 @@
             <h1>Contact Us</h1>
             <div class="facebook">
                 <p>Connect with us on <i class="fa-brands fa-facebook-square"></i> @ </p>
-                <a href=""></a></a>
+                <a href="https://m.facebook.com/pages/Zanny-hijabs/106691911120627">Facebook link</a>
             </div>
             <div class="whatsapp">
                 <p>Send us a DM on <i class="fa-brands fa-whatsapp-square"></i> @</p>
-                <a href=""></a>
-                
-            </div> 
-            <div class="twitter">
-                <p>Reach us on <i class="fa-brands fa-twitter-square"></i> @</p>
-                <a href=""></a>
+                <a href="https://wa.me/message/TWQGTFZVUR3XH1">WhatsApp link</a>
             </div>    
         </div>
     </div>
