fourth commit made, done.

--- a/index.html
+++ b/index.html
@@ -80,35 +80,26 @@
                         <img class="img" src="./images/customer-review-1.jpg" alt="reviewer">
                     </div>
                     <div class="right-card">
-                        <h3 class="name">Hallab</h3>
-                        <p>For my islamic waers, zanny hijabs is the best ive ever used, i like their products for the quality and their consistency</p>
+                        <h3 class="name">Hameedah</h3>
+                        <p>Zanny Hijabs is very good. I love their products. Their products are very attractive and stylish and they don't disappoint.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="left-card">
-                        <img class="img" src="./images/customer-review-1.jpg" alt="reviewer">
+                        <img class="img" src="./images/customer-review-2.jpg" alt="reviewer">
                     </div>
                     <div class="right-card">
-                        <h3 class="name">Hallab</h3>
-                        <p>For my islamic waers, zanny hijabs is the best ive ever used, i like their products for the quality and their consistency</p>
+                        <h3 class="name">Aisha</h3>
+                        <p>Zanny Hijabs gives the best.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="left-card">
-                        <img class="img" src="./images/customer-review-1.jpg" alt="reviewer">
+                        <img class="img" src="./images/customer-review-3.jpg" alt="reviewer">
                     </div>
                     <div class="right-card">
-                        <h3 class="name">Hallab</h3>
-                        <p>For my islamic waers, zanny hijabs is the best ive ever used, i like their products for the quality and their consistency</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="left-card">
-                        <img class="img" src="./images/customer-review-1.jpg" alt="reviewer">
-                    </div>
-                    <div class="right-card">
-                        <h3 class="name">Hallab</h3>
-                        <p>For my islamic waers, zanny hijabs is the best ive ever used, i like their products for the quality and their consistency</p>
+                        <h3 class="name">Ganiyat</h3>
+                        <p>Zanny Hijabs always sow my cloth very beautifully and no complaints from me, even without measurements. Thye are just too good.</p>
                     </div>
                 </div>
             </div>
